samples/_failures_safe/1761278212_f0a871_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de44d968.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_de44d968.c:163:5: error: expected expression at end of input
  163 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_de44d968.c:163:5: error: expected declaration or statement at end of input
